NAS4Free 9.1.0.1 - Sandstorm
----------------------------

Changes:
- Upgrade to FreeBSD 9.1-RELEASE p3.
- Improve WebGUI under PHP 5.4.
- Add LiveUSB mode as same as LiveCD.
- Revert to old CHS.
- Change geometry to CHS=x,255,63 of embedded image.
- Change php to php-cgi.
- v9.6 config is forever marked as a blacklist.
- Load zfs.ko and opensolaris.ko from loader.
- Use AES-NI in geli by default.
- Use clang for istgt by default.
- Rewrite gui.js with jQuery.
- Add HAST + iSCSI target service.
- Add HAST + CIFS/SMB service.
- Add HAST + GPT/UFS mount.
- Add HAST + ZFS import/export.
- Add HAST service WebGUI.
- Add upgrade method from old system.
- Add reload iSCSI target.
- Add graid geom utility.
- Add kern.geom.debugflags when installing.
- Add jail related files.
- Add HAST daemon and files.
- Add rpcinfo utility.
- Add vmstat utility.
- Add acpiconf/wake utility.
- Add sockstat utility.
- Add dmidecode utility.
- Add bzip2 utility.
- Add vmxnet3 kernel module.
- Add all kernel modules to boot media.
- Add ability to edit sync property on ZFS dataset and volume.
- Add ability to edit reservation property on ZFS dataset.
- Add ability to edit permission on ZFS dataset.
- Add ability to edit mountpoint of ZFS pool.
- Add ability to import encrypted disks.
- Add ability to import software raid disks. (except vinum)
- Add ability to import single disks. (detect ZFS/UFS/NTFS only)
- Add ability to configure multiple iSCSI LUNs. (disk type only)
- Add ability to configure multiple portal/initiator group.
- Add ability to configure HAST volume as iSCSI extent.
- Add ability to configure bind interface of CIFS/SMB.
- Add ability to edit power mode and CPU frequency.
- Add ability to edit write cache mode on iSCSI target.
- Add ability to edit upload directory of webserver.
- Add ability to edit password server of CIFS/SMB.
- Update mount points after importing disks. (GPT UFS/MBR UFS/GPT NTFS only)
- Add bridge/carp interface support.
- Add ZFS sparse volume support.